# AsTrovello

./: .gitignore  .pyproject.toml  LICENSE  README.md  environment.yml  pyproject.toml
Codes/: AsTrovello_lib.py  AsTrovello_run.py  galaxy_loop.py
scripts/Codes/: AsTrovello_run.py
src/astrovello/: __init__.py  alignment.py  astrovello_cli.py  batch_runner.py  convolution.py  cube.py  main_lib.py  mask.py  units.py  utils.py
src/astrovello.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
