[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrovello"
version = "0.1.1"
authors = [
  { name="André Almeida Trovello", email="seu-email@usp.br" },
]
description = "A framework for galaxy morphology and non-parametric decomposition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "astropy>=6.0",
    "scipy>=1.10",
    "matplotlib>=3.5",
    "pandas>=2.0",
    "photutils>=1.13",
    "reproject>=0.14",
    "regions>=0.10",
    "scikit-image>=0.20",
    "tqdm",
    "psutil",
    "pyyaml",
    "pypher>=0.7.3",
    "pyreadr>=0.5.4",
    "rasterio",
    "shapely",
    "dask",
    "zarr"
]

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
astrovello = 'astrovello.astrovello_cli:main'
astrovello-batch = 'astrovello.batch_runner:main'